--- a/website/index.html
+++ b/website/index.html
@@ -18,11 +18,14 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Home
-                        <span class="visually-hidden">(current)</span>
+                            <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="todo.html">To Do</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="new-todo.html">New To Do</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
