--- a/website/new-todo.html
+++ b/website/new-todo.html
@@ -21,12 +21,12 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="todo.html">To Do
-                            <span class="visually-hidden">(current)</span>
-                        </a>
+                        <a class="nav-link active" href="todo.html">To Do</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="new-todo.html">New To Do</a>
+                        <a class="nav-link active" href="new-todo.html">New To Do
+                            <span class="visually-hidden">(current)</span>
+                        </a>
                     </li>
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
@@ -46,14 +46,22 @@
         <main class="container">
             <div class="mt-4">
                 <div class="form-group">
-                    <label for="toDoIdInput" class="form-label">To Do ID: </label>
-                    <input type="text" id="toDoIdInput" class="form-control">
+                    <label for="userId" class="form-label">User ID: </label>
+                    <input type="number" id="userId" class="form-control" placeholder="Numbers ONLY">
                 </div>
-                <button class="btn btn-success col-2 p-2 m-2" id="searchButton">Search</button>
-
-                <div class="mt-3" id="toDoInfo">
-
+                <div class="form-group mt-3">
+                    <label for="title" class="form-label">Title: </label>
+                    <input type="text" id="title" class="form-control">
                 </div>
+                <div class="form-group mt-3">
+                    <label for="isItCompleted" class="form-label">Completed: </label>
+                    <!-- <input type="text" id="isItCompleted" class="form-control"> -->
+                    <select name="isItCompleted" id="isItCompleted" class="form-select">
+                        <option value="false">false</option>
+                        <option value="true">true</option>
+                    </select>
+                </div>
+                <button class="btn btn-success col-2 p-2 m-3" id="searchButton">Add</button>
             </div>
         </main>
 
