--- a/website/todo.html
+++ b/website/todo.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="scripts/todo.js"></script>
+        <script src="scripts/services/todo-service.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
